@@ -1037,7 +1037,7 @@ final class ProgramParser {
 		case yqlplusParser.RULE_fixed_or_parameter: {
 			ParseTree firstChild = parseTree.getChild(0);
 			if (getParseTreeIndex(firstChild) == yqlplusParser.INT) {
-				return OperatorNode.create(toLocation(scope, firstChild), ExpressionOperator.LITERAL, Integer.valueOf(firstChild.getText()));
+				return OperatorNode.create(toLocation(scope, firstChild), ExpressionOperator.LITERAL, new Integer(firstChild.getText()));
 			} else {
 				return convertExpr(firstChild, scope);
 			}
@@ -1369,9 +1369,9 @@ final class ProgramParser {
         String text = literal.getChild(0).getText();
         switch(parseTreeIndex) {
             case yqlplusParser.INT:
-                return Integer.valueOf(text);
+                return new Integer(text);
             case yqlplusParser.FLOAT:
-                return Double.valueOf(text);
+                return new Double(text);
             case yqlplusParser.STRING:
                 return StringUnescaper.unquote(text);
             case yqlplusParser.TRUE:
